# byregox

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: clippy.yml  main-pr.yml
.github/workflows/properties/: main-pr.properties.json
src/: lib.rs  tests.rs
src/types/: enums.rs  mod.rs  simulation.rs  structs.rs  tables.rs  traits.rs
src/types/actions/: mod.rs
src/types/actions/buff/: final_appraisal.rs  great_strides.rs  heart_and_soul.rs  innovation.rs  manipulation.rs  mod.rs  quick_innovation.rs  trained_perfection.rs  veneration.rs  waste_not.rs  waste_not_ii.rs
src/types/actions/other/: careful_observation.rs  delicate_synthesis.rs  immaculate_mend.rs  masters_mend.rs  mod.rs  observe.rs  remove_final_appraisal.rs  trained_perfection.rs  tricks_of_the_trade.rs
src/types/actions/progression/: basic_synthesis.rs  careful_synthesis.rs  focused_synthesis.rs  groundwork.rs  intensive_synthesis.rs  mod.rs  muscle_memory.rs  prudent_synthesis.rs  rapid_synthesis.rs
src/types/actions/quality/: advanced_touch.rs  basic_touch.rs  byregots_blessing.rs  daring_touch.rs  focused_touch.rs  hasty_touch.rs  mod.rs  precise_touch.rs  preparatory_touch.rs  prudent_touch.rs  refined_touch.rs  reflect.rs  standard_touch.rs  trained_eye.rs  trained_finesse.rs
