[package]
name = "ffxiv-tangocraft"
version = "0.0.1"
author = "sigfalt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
derive_builder = "0.20"
dotenvy = "0.15"
dyn-clone = "1.0"
enum_dispatch = "0.3"
rand = "0.8"
reqwest = "0.11"
serde = "1.0"
