[package]
name = "ffxiv-tangocraft"
version = "0.0.1"
authors = ["sigfalt#8886"]
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bon = "3.0"
dotenvy = "0.15"
dyn-clone = "1.0"
enum_dispatch = "0.3"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.8"
reqwest = "0.12"
serde = "1.0"
